--- a/source/index.html
+++ b/source/index.html
@@ -9,6 +9,7 @@
     <section class="index-first" style="background-image: url(img/sectionF/Mask.png);">
       <div class="container-mask">
         <div class="container">
+
           <div class="first-top">
             <h1 class="first-top__title">Keep your dreams aroused with a cup of coffee.</h1>
             <p class="first-top__about">The coffee ideas shared by these generators are not cool at all, as they are not
@@ -23,110 +24,112 @@
 
     <section class="index-offer">
       <div class="container">
-        <div class="offer-main">
-          <div class="offer-top main-top">
-            <h2 class="main-top__title">That is Our Best Offer</h2>
-            <p class="main-top__about">A coffee shop will help you to tell the audience what your business.</p>
+        <div class="index-offer__box">
+          <div class="offer-main">
+            <div class="offer-top main-top">
+              <h2 class="main-top__title">That is Our Best Offer</h2>
+              <p class="main-top__about">A coffee shop will help you to tell the audience what your business.</p>
+            </div>
+            <div class="swiper-btns">
+              <button class='swipe-back swiper-button-next1'></button>
+              <button class='swipe-back--next swipe-back swiper-button-prev1'></button>
+            </div>
           </div>
-          <div class="swiper-btns">
-            <button class='swipe-back swiper-button-next1'></button>
-            <button class='swipe-back--next swipe-back swiper-button-prev1'></button>
-          </div>
-        </div>
-        <div class='offer-box swiper-box'>
-          <div class='offer-swap swiper-container'>
-            <ul class='offer-wrapper swiper-wrapper'>
-              <li class='offer-slide swiper-slide'>
-                <div class="coffee-card">
-                  <div class="coffee-card__image">
-                    <picture>
-                      <source type='image/webp' srcset='img/section 1/image11.webp'>
-                      <img width='300' height='265' src='img/section 1/image11.png' alt='image'>
-                    </picture>
-                  </div>
-                  <div class="coffee-card__price">
-                    <span>$</span><span>5.99</span>
-                  </div>
-                  <h4 class="coffee-card__title">Brazilian coffe beans</h4>
-                  <p class="coffee-card__about">Coffee that’s always you handle your own the way you like. </p>
-                  <div class="coffee-card__counter">
-                    <form action="#" class="number">
-                      <label for="#" class="number__label">
-                        <input class="number__input" type="number" min="0" value="1" readonly />
-                      </label>
-                      <button class="number-minus number__buttons" type="button">
+          <div class='offer-box swiper-box'>
+            <div class='offer-swap swiper-container'>
+              <ul class='offer-wrapper swiper-wrapper'>
+                <li class='offer-slide swiper-slide'>
+                  <div class="coffee-card">
+                    <div class="coffee-card__image">
+                      <picture>
+                        <source type='image/webp' srcset='img/section 1/image11.webp'>
+                        <img width='300' height='265' src='img/section 1/image11.png' alt='image'>
+                      </picture>
+                    </div>
+                    <div class="coffee-card__price">
+                      <span>$</span><span>5.99</span>
+                    </div>
+                    <h4 class="coffee-card__title">Brazilian coffe beans</h4>
+                    <p class="coffee-card__about">Coffee that’s always you handle your own the way you like. </p>
+                    <div class="coffee-card__counter">
+                      <form action="#" class="number">
+                        <label for="#" class="number__label">
+                          <input class="number__input" type="number" min="0" value="1" readonly />
+                        </label>
+                        <button class="number-minus number__buttons" type="button">
 
-                      </button>
+                        </button>
 
-                      <button class="number-plus number__buttons" type="button">
+                        <button class="number-plus number__buttons" type="button">
 
-                      </button>
-                    </form>
-                    <button class="btn-card">Get Delivery</button>
+                        </button>
+                      </form>
+                      <button class="btn-card">Get Delivery</button>
+                    </div>
                   </div>
-                </div>
-              </li>
-              <li class='offer-slide swiper-slide'>
-                <div class="coffee-card">
-                  <div class="coffee-card__image">
-                    <picture>
-                      <source type='image/webp' srcset='img/section 1/image12.webp'>
-                      <img width='300' height='265' src='img/section 1/image12.png' alt='image'>
-                    </picture>
-                  </div>
-                  <div class="coffee-card__price">
-                    <span>$</span><span>4.99</span>
-                  </div>
-                  <h4 class="coffee-card__title">Brazilian coffe beans</h4>
-                  <p class="coffee-card__about">Coffee that’s always you handle your own the way you like. </p>
-                  <div class="coffee-card__counter">
-                    <form action="#" class="number">
-                      <label for="#" class="number__label">
-                        <input class="number__input" type="number" min="0" value="1" readonly />
-                      </label>
-                      <button class="number-minus number__buttons" type="button">
+                </li>
+                <li class='offer-slide swiper-slide'>
+                  <div class="coffee-card">
+                    <div class="coffee-card__image">
+                      <picture>
+                        <source type='image/webp' srcset='img/section 1/image12.webp'>
+                        <img width='300' height='265' src='img/section 1/image12.png' alt='image'>
+                      </picture>
+                    </div>
+                    <div class="coffee-card__price">
+                      <span>$</span><span>4.99</span>
+                    </div>
+                    <h4 class="coffee-card__title">Brazilian coffe beans</h4>
+                    <p class="coffee-card__about">Coffee that’s always you handle your own the way you like. </p>
+                    <div class="coffee-card__counter">
+                      <form action="#" class="number">
+                        <label for="#" class="number__label">
+                          <input class="number__input" type="number" min="0" value="1" readonly />
+                        </label>
+                        <button class="number-minus number__buttons" type="button">
 
-                      </button>
+                        </button>
 
-                      <button class="number-plus number__buttons" type="button">
+                        <button class="number-plus number__buttons" type="button">
 
-                      </button>
-                    </form>
-                    <button class="btn-card">Get Delivery</button>
+                        </button>
+                      </form>
+                      <button class="btn-card">Get Delivery</button>
+                    </div>
                   </div>
-                </div>
-              </li>
-              <li class='offer-slide swiper-slide'>
-                <div class="coffee-card">
-                  <div class="coffee-card__image">
-                    <picture>
-                      <source type='image/webp' srcset='img/section 1/image13.webp'>
-                      <img width='380' height='265' src='img/section 1/image13.png' alt='image'>
-                    </picture>
-                  </div>
-                  <div class="coffee-card__price">
-                    <span>$</span><span>3.99</span>
-                  </div>
-                  <h4 class="coffee-card__title">Brazilian coffe beans</h4>
-                  <p class="coffee-card__about">Coffee that’s always you handle your own the way you like. </p>
-                  <div class="coffee-card__counter">
-                    <form action="#" class="number">
-                      <label for="#" class="number__label">
-                        <input class="number__input" type="number" min="0" value="1" readonly />
-                      </label>
-                      <button class="number-minus number__buttons" type="button">
+                </li>
+                <li class='offer-slide swiper-slide'>
+                  <div class="coffee-card">
+                    <div class="coffee-card__image">
+                      <picture>
+                        <source type='image/webp' srcset='img/section 1/image13.webp'>
+                        <img width='380' height='265' src='img/section 1/image13.png' alt='image'>
+                      </picture>
+                    </div>
+                    <div class="coffee-card__price">
+                      <span>$</span><span>3.99</span>
+                    </div>
+                    <h4 class="coffee-card__title">Brazilian coffe beans</h4>
+                    <p class="coffee-card__about">Coffee that’s always you handle your own the way you like. </p>
+                    <div class="coffee-card__counter">
+                      <form action="#" class="number">
+                        <label for="#" class="number__label">
+                          <input class="number__input" type="number" min="0" value="1" readonly />
+                        </label>
+                        <button class="number-minus number__buttons" type="button">
 
-                      </button>
+                        </button>
 
-                      <button class="number-plus number__buttons" type="button">
+                        <button class="number-plus number__buttons" type="button">
 
-                      </button>
-                    </form>
-                    <button class="btn-card">Get Delivery</button>
+                        </button>
+                      </form>
+                      <button class="btn-card">Get Delivery</button>
+                    </div>
                   </div>
-                </div>
-              </li>
-            </ul>
+                </li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
@@ -135,56 +138,59 @@
 
     <section class="index-gallery">
       <div class="container">
-        <div class="main-top">
-          <h2 class="main-top__title">Our Gallery </h2>
-          <p class="main-top__about">The coffee shop name generator is a great tool for those that are deliberating what
-            to call their new coffee.</p>
+        <div class="index-gallery__box">
+          <div class="main-top">
+            <h2 class="main-top__title">Our Gallery </h2>
+            <p class="main-top__about">The coffee shop name generator is a great tool for those that are deliberating
+              what
+              to call their new coffee.</p>
+          </div>
+          <ul class="gallery-pictures">
+            <li class="gallery-pictures-item">
+              <div>
+                <picture>
+                  <source type='image/webp' srcset='img/section 2/Image21.webp'>
+                  <img width='362' height='330' src='img/section 2/Image21.png' alt='image'>
+                </picture>
+              </div>
+              <div>
+                <picture>
+                  <source type='image/webp' srcset='img/section 2/Image24.webp'>
+                  <img width='362' height='230' src='img/section 2/Image24.png' alt='image'>
+                </picture>
+              </div>
+            </li>
+            <li class="gallery-pictures-item">
+              <div>
+                <picture>
+                  <source type='image/webp' srcset='img/section 2/Image22.webp'>
+                  <img width='362' height='230' src='img/section 2/Image22.png' alt='image'>
+                </picture>
+              </div>
+              <div>
+                <picture>
+                  <source type='image/webp' srcset='img/section 2/Image25.webp'>
+                  <img width='362' height='330' src='img/section 2/Image25.png' alt='image'>
+                </picture>
+              </div>
+            </li>
+            <li class="gallery-pictures-item">
+              <div>
+                <picture>
+                  <source type='image/webp' srcset='img/section 2/Image23.webp'>
+                  <img width='362' height='330' src='img/section 2/Image23.png' alt='image'>
+                </picture>
+              </div>
+              <div>
+                <picture>
+                  <source type='image/webp' srcset='img/section 2/Image26.webp'>
+                  <img width='362' height='230' src='img/section 2/Image26.png' alt='image'>
+                </picture>
+              </div>
+            </li>
+          </ul>
+          <div class="loadMore"><a href="#">LOAD MORE</a></div>
         </div>
-        <ul class="gallery-pictures">
-          <li class="gallery-pictures-item">
-            <div>
-              <picture>
-                <source type='image/webp' srcset='img/section 2/Image21.webp'>
-                <img width='362' height='330' src='img/section 2/Image21.png' alt='image'>
-              </picture>
-            </div>
-            <div>
-              <picture>
-                <source type='image/webp' srcset='img/section 2/Image24.webp'>
-                <img width='362' height='230' src='img/section 2/Image24.png' alt='image'>
-              </picture>
-            </div>
-          </li>
-          <li class="gallery-pictures-item">
-            <div>
-              <picture>
-                <source type='image/webp' srcset='img/section 2/Image22.webp'>
-                <img width='362' height='230' src='img/section 2/Image22.png' alt='image'>
-              </picture>
-            </div>
-            <div>
-              <picture>
-                <source type='image/webp' srcset='img/section 2/Image25.webp'>
-                <img width='362' height='330' src='img/section 2/Image25.png' alt='image'>
-              </picture>
-            </div>
-          </li>
-          <li class="gallery-pictures-item">
-            <div>
-              <picture>
-                <source type='image/webp' srcset='img/section 2/Image23.webp'>
-                <img width='362' height='330' src='img/section 2/Image23.png' alt='image'>
-              </picture>
-            </div>
-            <div>
-              <picture>
-                <source type='image/webp' srcset='img/section 2/Image26.webp'>
-                <img width='362' height='230' src='img/section 2/Image26.png' alt='image'>
-              </picture>
-            </div>
-          </li>
-        </ul>
-        <div class="loadMore"><a href="#">LOAD MORE</a></div>
       </div>
     </section>
 
@@ -221,7 +227,7 @@
       </div>
     </section>
 
-    
+
     <section class="update-section">
       <div class="container">
         <div class="main-top">
@@ -244,7 +250,7 @@
                     <h3 class="slideBox-info__title">Coffe beans</h3>
                     <p class="slideBox-info__about">These advertising mottos are targeted to the 56% of coffee
                       drinking consumers.</p>
-                    <a class="slideBox-info__more" href="">Learn More</a>
+                      <a class="slideBox-info__more" href="">Learn More<span href="#" class="slideBox-info__arrow"></span></a>
                   </div>
                 </div>
               </li>
@@ -260,7 +266,7 @@
                     <h3 class="slideBox-info__title">Coffe beans</h3>
                     <p class="slideBox-info__about">These advertising mottos are targeted to the 56% of coffee
                       drinking consumers.</p>
-                    <a class="slideBox-info__more" href="">Learn More</a>
+                      <a class="slideBox-info__more" href="">Learn More<span href="#" class="slideBox-info__arrow"></span></a>
                   </div>
                 </div>
               </li>
@@ -276,7 +282,7 @@
                     <h3 class="slideBox-info__title">Coffe beans</h3>
                     <p class="slideBox-info__about">These advertising mottos are targeted to the 56% of coffee
                       drinking consumers.</p>
-                    <a class="slideBox-info__more" href="">Learn More</a>
+                      <a class="slideBox-info__more" href="">Learn More<span href="#" class="slideBox-info__arrow"></span></a>
                   </div>
                 </div>
               </li>
