--- a/source/index.html
+++ b/source/index.html
@@ -148,12 +148,12 @@
           <ul class="gallery-pictures">
             <li class="gallery-pictures-item">
               <div>
-                <picture>
+                <picture class="gallery-pictures__item-top">
                   <source type='image/webp' srcset='img/section 2/Image21.webp'>
                   <img width='362' height='330' src='img/section 2/Image21.png' alt='image'>
                 </picture>
               </div>
-              <div>
+              <div class="gallery-pictures__item-bottom">
                 <picture>
                   <source type='image/webp' srcset='img/section 2/Image24.webp'>
                   <img width='362' height='230' src='img/section 2/Image24.png' alt='image'>
@@ -161,27 +161,27 @@
               </div>
             </li>
             <li class="gallery-pictures-item">
-              <div>
-                <picture>
-                  <source type='image/webp' srcset='img/section 2/Image22.webp'>
-                  <img width='362' height='230' src='img/section 2/Image22.png' alt='image'>
-                </picture>
-              </div>
-              <div>
+              <div class="gallery-pictures__item-bottom">
                 <picture>
                   <source type='image/webp' srcset='img/section 2/Image25.webp'>
                   <img width='362' height='330' src='img/section 2/Image25.png' alt='image'>
                 </picture>
               </div>
+              <div class="gallery-pictures__item-top">
+                <picture>
+                  <source type='image/webp' srcset='img/section 2/Image22.webp'>
+                  <img width='362' height='230' src='img/section 2/Image22.png' alt='image'>
+                </picture>
+              </div>
             </li>
             <li class="gallery-pictures-item">
-              <div>
+              <div class="gallery-pictures__item-top">
                 <picture>
                   <source type='image/webp' srcset='img/section 2/Image23.webp'>
                   <img width='362' height='330' src='img/section 2/Image23.png' alt='image'>
                 </picture>
               </div>
-              <div>
+              <div class="gallery-pictures__item-bottom">
                 <picture>
                   <source type='image/webp' srcset='img/section 2/Image26.webp'>
                   <img width='362' height='230' src='img/section 2/Image26.png' alt='image'>
@@ -230,67 +230,69 @@
 
     <section class="update-section">
       <div class="container">
-        <div class="main-top">
-          <h2 class="main-top__title">Update News</h2>
-          <p class="main-top__about">A cup of brewed coffee represents a contribution of up to 1.8 grams of fiber of
-            the recommended.</p>
-        </div>
-        <div class='update-box swiper-box'>
-          <div class='update-swap swiper-container'>
-            <ul class='update-wrapper swiper-wrapper'>
-              <li class='update-slide swiper-slide'>
-                <div class="slideBox">
-                  <div class="coffeePicture">
-                    <picture>
-                      <source type='image/webp' srcset='img/section 3/coffee1.webp'>
-                      <img width='100' height='100' src='img/section 3/coffee1.png' alt='image'>
-                    </picture>
-                  </div>
-                  <div class="slideBox-info">
-                    <h3 class="slideBox-info__title">Coffe beans</h3>
-                    <p class="slideBox-info__about">These advertising mottos are targeted to the 56% of coffee
-                      drinking consumers.</p>
-                      <a class="slideBox-info__more" href="">Learn More<span href="#" class="slideBox-info__arrow"></span></a>
-                  </div>
-                </div>
-              </li>
-              <li class='update-slide swiper-slide'>
-                <div class="slideBox">
-                  <div class="coffeePicture">
-                    <picture>
-                      <source type='image/webp' srcset='img/section 3/coffee2.webp'>
-                      <img width='100' height='100' src='img/section 3/coffee2.png' alt='image'>
-                    </picture>
-                  </div>
-                  <div class="slideBox-info">
-                    <h3 class="slideBox-info__title">Coffe beans</h3>
-                    <p class="slideBox-info__about">These advertising mottos are targeted to the 56% of coffee
-                      drinking consumers.</p>
-                      <a class="slideBox-info__more" href="">Learn More<span href="#" class="slideBox-info__arrow"></span></a>
-                  </div>
-                </div>
-              </li>
-              <li class='update-slide  swiper-slide'>
-                <div class="slideBox">
-                  <div class="coffeePicture">
-                    <picture>
-                      <source type='image/webp' srcset='img/section 3/coffee3.webp'>
-                      <img width='100' height='100' src='img/section 3/coffee3.png' alt='image'>
-                    </picture>
-                  </div>
-                  <div class="slideBox-info">
-                    <h3 class="slideBox-info__title">Coffe beans</h3>
-                    <p class="slideBox-info__about">These advertising mottos are targeted to the 56% of coffee
-                      drinking consumers.</p>
-                      <a class="slideBox-info__more" href="">Learn More<span href="#" class="slideBox-info__arrow"></span></a>
-                  </div>
-                </div>
-              </li>
-            </ul>
+        <div class="update-section__box">
+          <div class="main-top">
+            <h2 class="main-top__title">Update News</h2>
+            <p class="main-top__about">A cup of brewed coffee represents a contribution of up to 1.8 grams of fiber of
+              the recommended.</p>
           </div>
-          <button class='swiper-button-prev2'></button>
-          <button class='swiper-button-next2'></button>
-          <span class='swiper-pagination2'></span>
+          <div class='update-box swiper-box'>
+            <div class='update-swap swiper-container'>
+              <ul class='update-wrapper swiper-wrapper'>
+                <li class='update-slide swiper-slide'>
+                  <div class="slideBox">
+                    <div class="coffeePicture">
+                      <picture>
+                        <source type='image/webp' srcset='img/section 3/coffee1.webp'>
+                        <img width='100' height='100' src='img/section 3/coffee1.png' alt='image'>
+                      </picture>
+                    </div>
+                    <div class="slideBox-info">
+                      <h3 class="slideBox-info__title">Coffe beans</h3>
+                      <p class="slideBox-info__about">These advertising mottos are targeted to the 56% of coffee
+                        drinking consumers.</p>
+                        <a class="slideBox-info__more" href="">Learn More<span href="#" class="slideBox-info__arrow"></span></a>
+                    </div>
+                  </div>
+                </li>
+                <li class='update-slide swiper-slide'>
+                  <div class="slideBox">
+                    <div class="coffeePicture">
+                      <picture>
+                        <source type='image/webp' srcset='img/section 3/coffee2.webp'>
+                        <img width='100' height='100' src='img/section 3/coffee2.png' alt='image'>
+                      </picture>
+                    </div>
+                    <div class="slideBox-info">
+                      <h3 class="slideBox-info__title">Coffe beans</h3>
+                      <p class="slideBox-info__about">These advertising mottos are targeted to the 56% of coffee
+                        drinking consumers.</p>
+                        <a class="slideBox-info__more" href="">Learn More<span href="#" class="slideBox-info__arrow"></span></a>
+                    </div>
+                  </div>
+                </li>
+                <li class='update-slide  swiper-slide'>
+                  <div class="slideBox">
+                    <div class="coffeePicture">
+                      <picture>
+                        <source type='image/webp' srcset='img/section 3/coffee3.webp'>
+                        <img width='100' height='100' src='img/section 3/coffee3.png' alt='image'>
+                      </picture>
+                    </div>
+                    <div class="slideBox-info">
+                      <h3 class="slideBox-info__title">Coffe beans</h3>
+                      <p class="slideBox-info__about">These advertising mottos are targeted to the 56% of coffee
+                        drinking consumers.</p>
+                        <a class="slideBox-info__more" href="">Learn More<span href="#" class="slideBox-info__arrow"></span></a>
+                    </div>
+                  </div>
+                </li>
+              </ul>
+            </div>
+            <button class='swiper-button-prev2'></button>
+            <button class='swiper-button-next2'></button>
+            <span class='swiper-pagination2'></span>
+          </div>
         </div>
       </div>
     </section>
